--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dzoupwn0e/image/upload/v1753710438/logotipo-nutricion_786241-1015_nh095x.avif" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dzoupwn0e/image/upload/v1753753066/logo_zad7ls.webp" />
     <link rel="stylesheet" href="src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>María Nutricionista</title>
