Actualizacion del title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dzoupwn0e/image/upload/v1753753066/logo_zad7ls.webp" />
     <link rel="stylesheet" href="src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>María Nutricionista</title>
+    <title>María Victoria Paravizini</title>
   </head>
   <body>
     <div id="root"></div>
