Correcion de mejora

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dzoupwn0e/image/upload/v1753753066/logo_zad7ls.webp" />
     <link rel="apple-touch-icon" href="https://res.cloudinary.com/dzoupwn0e/image/upload/v1753753066/logo_zad7ls.webp" />
     
-    <!-- PWA Manifest -->
+    <!-- PWA / Mobile -->
+    <meta name="theme-color" content="#10b981" />
     <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="María Nutrición" />
     
     <!-- Styles -->
     <link rel="stylesheet" href="src/index.css">
